# libft

./: .gitignore  CMakeLists.txt  Makefile  a.out  auteur  ft_atoi.c  ft_bzero.c  ft_digitlen.c  ft_isalnum.c  ft_isalpha.c  ft_isblank.c  ft_itoa.c  ft_lstdel.c  ft_lstdelete.c  ft_lstdelone.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_perror.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_strchr.c  ft_strclr.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  (+17 more)
Sources/: ft_abs.c  ft_atoi.c  ft_bzero.c  ft_digitlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelete.c  ft_lstdelone.c  ft_lstend.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putcolor.c  ft_putcolor_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  (+36 more)
Tests/: AbsTests.swift  AtoiTests.swift  BzeroTests.swift  FileHelper.swift  GetNextLineTests.swift  IsAlnumTests.swift  IsAlphaTests.swift  IsAsciiTests.swift  IsDigitTests.swift  IsPrintTests.swift  MemallocTests.swift  MemccpyTests.swift  MemchrTests.swift  MemcmpTests.swift  MemcpyTests.swift  MemdelTests.swift  MemmoveTests.swift  MemsetTests.swift  PrintfHelper.swift  PutcharTests.swift  (+36 more)
(+211 files in other folders)
